# research-director-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
claude_code_skill/: SKILL.md
examples/: q2-cli-brief.md  q4-cli-brief.md
src/research_director_cli/: __init__.py  cli.py  core.py
